2005-10-26  jrandom     * In Syndie, propogate the subject and tags in a reply, and show the parent       post on the edit page for easy quoting.  (thanks identiguy and CofE!)     * Streamline some netDb query handling to run outside the jobqueue -       which means they'll run on the particular SSU thread that handles the       message.  This should help out heavily loaded netDb peers.
Monotone-Parent: 02ec12cd5426ad883288ea6cf5849cce49413bc2
Monotone-Revision: 71e9673df6737a59828d3cc184db8ff3e21ee0c3

Monotone-Author: jrandom
Monotone-Date: 2005-10-28T22:26:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.305 2005/10/22 13:06:03 jrandom Exp $
+$Id: history.txt,v 1.306 2005/10/25 14:13:54 jrandom Exp $
+
+2005-10-26  jrandom
+    * In Syndie, propogate the subject and tags in a reply, and show the parent
+      post on the edit page for easy quoting.  (thanks identiguy and CofE!)
+    * Streamline some netDb query handling to run outside the jobqueue -
+      which means they'll run on the particular SSU thread that handles the
+      message.  This should help out heavily loaded netDb peers.
 
 2005-10-25  jrandom
     * Defer netDb searches for newly referenced peers until we actually want
