2005-10-30  dust     * Merge sucker into syndie with a rssimport.jsp page.     * Add getContentType() to EepGet.     * Make chunked transfer work (better) with EepGet.     * Do replaceAll("<","&lt;") for logs.
Monotone-Parent: 7edcca8ebb6d37166456ada9c39e42f1ae2459e4
Monotone-Revision: 5e3ec6901816ab81e6c3cb88da67b000a327a1d7

Monotone-Author: dust
Monotone-Date: 2005-10-30T05:47:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.308 2005/10/29 16:35:27 jrandom Exp $
+$Id: history.txt,v 1.309 2005/10/29 18:20:04 jrandom Exp $
+
+2005-10-30  dust
+    * Merge sucker into syndie with a rssimport.jsp page.
+    * Add getContentType() to EepGet.
+    * Make chunked transfer work (better) with EepGet.
+    * Do replaceAll("<","&lt;") for logs.
 
 * 2005-10-29  0.6.1.4 released
 
