2005-10-31  jrandom     * Fix for some syndie reply scenarios (thanks identiguy and CofE!)     * Removed a potentially infinitely recursive call (oops)
Monotone-Parent: bbd1851e1482b210114db2c15fe675f2ed359c06
Monotone-Revision: 20c0650e33863576423b31d5c63380ca009cb763

Monotone-Author: jrandom
Monotone-Date: 2005-10-31T20:03:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.309 2005/10/29 18:20:04 jrandom Exp $
+$Id: history.txt,v 1.310 2005/10/30 00:47:55 dust Exp $
+
+2005-10-31  jrandom
+    * Fix for some syndie reply scenarios (thanks identiguy and CofE!)
+    * Removed a potentially infinitely recursive call (oops)
 
 2005-10-30  dust
     * Merge sucker into syndie with a rssimport.jsp page.
