2005-11-01  jrandom     * Added a few more css elements (thanks identiguy!)
Monotone-Parent: 20c0650e33863576423b31d5c63380ca009cb763
Monotone-Revision: 19b2157bef565a2479ad1ea76e030b81e4bfde7d

Monotone-Author: jrandom
Monotone-Date: 2005-11-02T00:35:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.310 2005/10/30 00:47:55 dust Exp $
+$Id: history.txt,v 1.311 2005/10/31 15:03:11 jrandom Exp $
+
+2005-11-01  jrandom
+    * Added a few more css elements (thanks identiguy!)
 
 2005-10-31  jrandom
     * Fix for some syndie reply scenarios (thanks identiguy and CofE!)
