2005-11-05  dust     * Fix sucker to delete its temporary files.     * Improve sucker's sml output some.     * Fix Exception in SMLParser for weird sml.
Monotone-Parent: e307ec69ddc8c2c24d80780c5dc5af805b169a34
Monotone-Revision: 4113ff693a0033e590dc35e0da744f3b7092abbe

Monotone-Author: dust
Monotone-Date: 2005-11-05T11:01:57
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.312 2005/11/01 19:35:21 jrandom Exp $
+$Id: history.txt,v 1.313 2005/11/03 20:20:18 jrandom Exp $
+
+2005-11-05  dust
+    * Fix sucker to delete its temporary files.
+    * Improve sucker's sml output some.
+    * Fix Exception in SMLParser for weird sml.
 
 2005-11-03  zzz
     * Added a new error page to the eepproxy to differentiate the full 60
