2005-11-05  jrandom     * Include the most recent ACKs with packets, rather than only sending an       ack exactly once.  SSU differs from TCP in this regard, as TCP has ever       increasing sequence numbers, while each message ID in SSU is random, so       we don't get the benefit of later ACKs implicitly ACKing earlier       messages.     * Reduced the max retransmission timeout for SSU     * Don't try to send messages queued up for a long time waiting for       establishment.
Monotone-Parent: 4113ff693a0033e590dc35e0da744f3b7092abbe
Monotone-Revision: b82accbd6b376f25be9a700685926fd7b0d79dde

Monotone-Author: jrandom
Monotone-Date: 2005-11-05T21:12:57
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
-$Id: history.txt,v 1.313 2005/11/03 20:20:18 jrandom Exp $
+$Id: history.txt,v 1.314 2005/11/05 06:01:57 dust Exp $
+
+2005-11-05  jrandom
+    * Include the most recent ACKs with packets, rather than only sending an
+      ack exactly once.  SSU differs from TCP in this regard, as TCP has ever
+      increasing sequence numbers, while each message ID in SSU is random, so
+      we don't get the benefit of later ACKs implicitly ACKing earlier
+      messages.
+    * Reduced the max retransmission timeout for SSU
+    * Don't try to send messages queued up for a long time waiting for
+      establishment.
 
 2005-11-05  dust
     * Fix sucker to delete its temporary files.
