2005-11-11  jrandom     * Default Syndie to single user mode, and automatically log into a default       user account (additional accounts can be logged into with the 'switch'       or login pages, and new accounts can be created with the register page).     * Disable the 'automated' column on the Syndie addressbook unless the user       is appropriately authorized (good idea Polecat!)
Monotone-Parent: 4d4473053ad176fa09ab3e90332bb9e78be879e0
Monotone-Revision: dc33c87da2c267b2b349fa950d3123c2b813fdf3

Monotone-Author: jrandom
Monotone-Date: 2005-11-11T11:29:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.316 2005/11/06 17:25:18 jrandom Exp $
+$Id: history.txt,v 1.317 2005/11/10 22:46:36 jrandom Exp $
+
+2005-11-11  jrandom
+    * Default Syndie to single user mode, and automatically log into a default
+      user account (additional accounts can be logged into with the 'switch'
+      or login pages, and new accounts can be created with the register page).
+    * Disable the 'automated' column on the Syndie addressbook unless the user
+      is appropriately authorized (good idea Polecat!)
 
 2005-11-10  jrandom
     * First pass to a new threaded Syndie interface, which isn't enabled by
