more syndie cleanup
Monotone-Parent: 4bcde74669d8f277b3bb74246f991526536d7e89
Monotone-Revision: 5a7b7e0731c84773c119656789ccb77d58f181ca

Monotone-Author: jrandom
Monotone-Date: 2005-11-15T00:24:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.319 2005/11/11 21:38:56 cervantes Exp $
+$Id: history.txt,v 1.320 2005/11/12 00:03:54 jrandom Exp $
+
+2005-11-14  jrandom
+    * Migrate to the new Syndie interface
 
 2005-11-11  jrandom
     * Add filtering threads by author to Syndie, populated with authors in the
