2005-11-17  jrandom     * More cautious file handling in Syndie
Monotone-Parent: 493984e997994c7cd668d057babea20d40e0d496
Monotone-Revision: 6b7f89d6ace805d5302201ff065de91fe13154e2

Monotone-Author: jrandom
Monotone-Date: 2005-11-17T08:23:45
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.322 2005/11/15 22:20:22 jrandom Exp $
+$Id: history.txt,v 1.323 2005/11/16 06:50:56 jrandom Exp $
+
+2005-11-17  jrandom
+    * More cautious file handling in Syndie
 
 2005-11-16  jrandom
     * More aggressive I2PTunnel content encoding munging to work around some
