2005-11-19  jrandom     * Implemented a trivial pure java PMTU backoff strategy, switching between       a 608 byte MTU and a 1350 byte MTU, depending upon retransmission rates.     * Fixed new user registration in Syndie (thanks Complication!)
Monotone-Parent: 6b7f89d6ace805d5302201ff065de91fe13154e2
Monotone-Revision: 13783ec42ad9729a508ac5631ed4016de1a7b57b

Monotone-Author: jrandom
Monotone-Date: 2005-11-20T04:42:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.323 2005/11/16 06:50:56 jrandom Exp $
+$Id: history.txt,v 1.324 2005/11/17 03:23:46 jrandom Exp $
+
+2005-11-19  jrandom
+    * Implemented a trivial pure java PMTU backoff strategy, switching between
+      a 608 byte MTU and a 1350 byte MTU, depending upon retransmission rates.
+    * Fixed new user registration in Syndie (thanks Complication!)
 
 2005-11-17  jrandom
     * More cautious file handling in Syndie
