2005-11-23  jrandom     * Removed spurious streaming lib RTO increase (it wasn't helpful)     * Streamlined the tunnel batching to schedule batch transmissions more       appropriately.     * Default tunnel pool variance to 2 +0-1 hops
Monotone-Parent: 22c0e749d9bd49e1ec96449cda385e9c3709cbf4
Monotone-Revision: 6d89095a2b3b394c43b2a32e08e4b734decd0914

Monotone-Author: jrandom
Monotone-Date: 2005-11-23T16:04:52
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.325 2005/11/19 23:42:17 jrandom Exp $
+$Id: history.txt,v 1.326 2005/11/21 09:37:10 jrandom Exp $
+
+2005-11-23  jrandom
+    * Removed spurious streaming lib RTO increase (it wasn't helpful)
+    * Streamlined the tunnel batching to schedule batch transmissions more
+      appropriately.
+    * Default tunnel pool variance to 2 +0-1 hops
 
 2005-11-21  jrandom
     * IE doesn't strip SPAN from <button> form fields, so add in a workaround
