2005-11-24  jrandom     * Fix to save syndication settings in Syndie (thanks spaetz!)
Monotone-Parent: 6d89095a2b3b394c43b2a32e08e4b734decd0914
Monotone-Revision: dd8212c46d04825ac12ff867d3d4973b45bd98a4

Monotone-Author: jrandom
Monotone-Date: 2005-11-24T08:45:54
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.326 2005/11/21 09:37:10 jrandom Exp $
+$Id: history.txt,v 1.327 2005/11/23 11:04:56 jrandom Exp $
+
+2005-11-24  jrandom
+    * Fix to save syndication settings in Syndie (thanks spaetz!)
 
 2005-11-23  jrandom
     * Removed spurious streaming lib RTO increase (it wasn't helpful)
