2005-11-27  jrandom     * Inlined the Syndie CSS to reduce the number of HTTP requests (and       because firefox [and others?] delay rendering until they fetch the css).     * Make sure we fire the shutdown tasks when regenerating a new identity       (thanks picsou!)     * Cleaned up some of the things I b0rked in the 'dynamic keys' mode     * Don't drop SSU sessions if they're still transmitting data successfully,       even if there are transmission failures     * Adjusted the time summarization to display hours after 119m, not 90m     * Further EepGet cleanup (grr)
Monotone-Parent: b57fe3885230b544f48791bae9efbb1d07b4bfc3
Monotone-Revision: dd80874cb9374688357baa5a58af9ca4bf9d3640

Monotone-Author: jrandom
Monotone-Date: 2005-11-28T16:02:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,15 @@
-$Id: history.txt,v 1.333 2005/11/26 11:51:20 jrandom Exp $
+$Id: history.txt,v 1.334 2005/11/26 13:26:24 jrandom Exp $
+
+2005-11-27  jrandom
+    * Inlined the Syndie CSS to reduce the number of HTTP requests (and
+      because firefox [and others?] delay rendering until they fetch the css).
+    * Make sure we fire the shutdown tasks when regenerating a new identity
+      (thanks picsou!)
+    * Cleaned up some of the things I b0rked in the 'dynamic keys' mode
+    * Don't drop SSU sessions if they're still transmitting data successfully,
+      even if there are transmission failures
+    * Adjusted the time summarization to display hours after 119m, not 90m
+    * Further EepGet cleanup (grr)
 
 * 2005-11-26 0.6.1.6 released
 
