2005-11-29  zzz     * Added a link to orion's jump page on the 'key not found' error page.
Monotone-Parent: 3bc6ad1392dce98ef8cbd2cf50f972aa8d5b52cb
Monotone-Revision: 53e4d6cb073267aea537ff8eadb4a3cec2bf119e

Monotone-Author: jrandom
Monotone-Date: 2005-11-29T17:56:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.336 2005/11/29 07:46:34 jrandom Exp $
+$Id: history.txt,v 1.337 2005/11/29 11:58:01 jrandom Exp $
+
+2005-11-29  zzz
+    * Added a link to orion's jump page on the 'key not found' error page.
 
 2005-11-29  jrandom
     * Further Syndie UI cleanup
